tests/baselines/reference/jsdocAbstract4.errors.txt
tests/cases/conformance/jsdoc/jsdocAbstract4.js(51,5): error TS1245: Method 'm' cannot have an implementation because it is marked abstract.
tests/cases/conformance/jsdoc/jsdocAbstract4.js(58,9): error TS1318: An abstract accessor cannot have an implementation.
tests/cases/conformance/jsdoc/jsdocAbstract4.js(65,9): error TS1318: An abstract accessor cannot have an implementation.
tests/cases/conformance/jsdoc/jsdocAbstract4.js(73,5): error TS1245: Method 'm' cannot have an implementation because it is marked abstract.
tests/cases/conformance/jsdoc/jsdocAbstract4.js(84,9): error TS1318: An abstract accessor cannot have an implementation.


==== tests/cases/conformance/jsdoc/jsdocAbstract4.js (5 errors) ====
    /** @abstract */
    class C1 {
        /** @abstract */
        m() {}
    
        /** @abstract */
        set p1(value) {}
    
        /** @abstract */
        get p1() {}
    }
    
    /** @abstract */
    class C2 {
        /** @abstract */
        m() {
            throw new Error("Method not implemented.")
        }
    
        /** @abstract */
        set p1(value) {
            throw new Error("Method not implemented.")
        }
    
        /** @abstract */
        get p1() {
            throw new Error("Method not implemented.")
        }
    }
    
    /** @abstract */
    class C3 {
        /** @abstract */
        m() {
            /** @type {never} */
            let x;
            return x;
        }
    
        /** @abstract */
        get p1() {
            /** @type {never} */
            let x;
            return x;
        }
    }
    
    /** @abstract */
    class C4 {
        /** @abstract */
        m() {
        ~
!!! error TS1245: Method 'm' cannot have an implementation because it is marked abstract.
            const x = 1;
            const y = 1;
            return x + y;
        }
    
        /** @abstract */
        get p1() {
            ~~
!!! error TS1318: An abstract accessor cannot have an implementation.
            const x = 1;
            const y = 1;
            return x + y;
        }
    
        /** @abstract */
        set p1(value) {
            ~~
!!! error TS1318: An abstract accessor cannot have an implementation.
            this.p1 = value;
        }
    }
    
    /** @abstract */
    class C5 {
        /** @abstract */
        m() {
        ~
!!! error TS1245: Method 'm' cannot have an implementation because it is marked abstract.
            const x = 1;
            /** @type {never} */
            let y;
            if (x) {
                return x;
            }
            return y;
        }
    
        /** @abstract */
        get p1() {
            ~~
!!! error TS1318: An abstract accessor cannot have an implementation.
            const x = 1;
            /** @type {never} */
            let y;
            if (x) {
                return x;
            }
            return y;
        }
    }
    